// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mex exam package creation with createMex creates a mex with koe-update.zip 1`] = `
[
  {
    "fileName": undefined,
    "uncompressedSize": 8,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 16,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 19,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 5279073,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 22,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
]
`;

exports[`Mex exam package creation with createMex creates a minimal mex with verifyable exam.xml signature 1`] = `
[
  {
    "fileName": undefined,
    "uncompressedSize": 8,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 16,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 5279073,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 22,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
]
`;

exports[`Mex exam package creation with createMultiMex creates a minimal multimex 1`] = `
[
  {
    "fileName": undefined,
    "uncompressedSize": 11,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 11,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 16,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 19,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
]
`;

exports[`Mex exam package creation with createMultiMex creates a multimex with koe-update.zip 1`] = `
[
  {
    "fileName": undefined,
    "uncompressedSize": 11,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 11,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 16,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 19,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 19,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
  {
    "fileName": undefined,
    "uncompressedSize": 88,
  },
]
`;
